improve add api
