# api/v1/oas_handlers_gen.go
@@ -20,161 +20,6 @@ import (
 	"github.com/ogen-go/ogen/otelogen"
 )
 
-// handleAddMetadataRequest handles addMetadata operation.
-//
-// Add record metadata.
-//
-// POST /add-metadata
-func (s *Server) handleAddMetadataRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
-	otelAttrs := []attribute.KeyValue{
-		otelogen.OperationID("addMetadata"),
-		semconv.HTTPMethodKey.String("POST"),
-		semconv.HTTPRouteKey.String("/add-metadata"),
-	}
-
-	// Start a span for this request.
-	ctx, span := s.cfg.Tracer.Start(r.Context(), "AddMetadata",
-		trace.WithAttributes(otelAttrs...),
-		serverSpanKind,
-	)
-	defer span.End()
-
-	// Run stopwatch.
-	startTime := time.Now()
-	defer func() {
-		elapsedDuration := time.Since(startTime)
-		// Use floating point division here for higher precision (instead of Millisecond method).
-		s.duration.Record(ctx, float64(float64(elapsedDuration)/float64(time.Millisecond)), metric.WithAttributes(otelAttrs...))
-	}()
-
-	// Increment request counter.
-	s.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
-
-	var (
-		recordError = func(stage string, err error) {
-			span.RecordError(err)
-			span.SetStatus(codes.Error, stage)
-			s.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
-		}
-		err          error
-		opErrContext = ogenerrors.OperationContext{
-			Name: "AddMetadata",
-			ID:   "addMetadata",
-		}
-	)
-	{
-		type bitset = [1]uint8
-		var satisfied bitset
-		{
-			sctx, ok, err := s.securityApiKey(ctx, "AddMetadata", r)
-			if err != nil {
-				err = &ogenerrors.SecurityError{
-					OperationContext: opErrContext,
-					Security:         "ApiKey",
-					Err:              err,
-				}
-				recordError("Security:ApiKey", err)
-				s.cfg.ErrorHandler(ctx, w, r, err)
-				return
-			}
-			if ok {
-				satisfied[0] |= 1 << 0
-				ctx = sctx
-			}
-		}
-
-		if ok := func() bool {
-		nextRequirement:
-			for _, requirement := range []bitset{
-				{0b00000001},
-			} {
-				for i, mask := range requirement {
-					if satisfied[i]&mask != mask {
-						continue nextRequirement
-					}
-				}
-				return true
-			}
-			return false
-		}(); !ok {
-			err = &ogenerrors.SecurityError{
-				OperationContext: opErrContext,
-				Err:              ogenerrors.ErrSecurityRequirementIsNotSatisfied,
-			}
-			recordError("Security", err)
-			s.cfg.ErrorHandler(ctx, w, r, err)
-			return
-		}
-	}
-	request, close, err := s.decodeAddMetadataRequest(r)
-	if err != nil {
-		err = &ogenerrors.DecodeRequestError{
-			OperationContext: opErrContext,
-			Err:              err,
-		}
-		recordError("DecodeRequest", err)
-		s.cfg.ErrorHandler(ctx, w, r, err)
-		return
-	}
-	defer func() {
-		if err := close(); err != nil {
-			recordError("CloseRequest", err)
-		}
-	}()
-
-	var response *AddMetadataOK
-	if m := s.cfg.Middleware; m != nil {
-		mreq := middleware.Request{
-			Context:       ctx,
-			OperationName: "AddMetadata",
-			OperationID:   "addMetadata",
-			Body:          request,
-			Params:        middleware.Parameters{},
-			Raw:           r,
-		}
-
-		type (
-			Request  = *AddMetadataRequest
-			Params   = struct{}
-			Response = *AddMetadataOK
-		)
-		response, err = middleware.HookMiddleware[
-			Request,
-			Params,
-			Response,
-		](
-			m,
-			mreq,
-			nil,
-			func(ctx context.Context, request Request, params Params) (response Response, err error) {
-				err = s.h.AddMetadata(ctx, request)
-				return response, err
-			},
-		)
-	} else {
-		err = s.h.AddMetadata(ctx, request)
-	}
-	if err != nil {
-		recordError("Internal", err)
-		if errRes, ok := errors.Into[*ErrorStatusCode](err); ok {
-			encodeErrorResponse(errRes, w, span)
-			return
-		}
-		if errors.Is(err, ht.ErrNotImplemented) {
-			s.cfg.ErrorHandler(ctx, w, r, err)
-			return
-		}
-		encodeErrorResponse(s.h.NewError(ctx, err), w, span)
-		return
-	}
-
-	if err := encodeAddMetadataResponse(response, w, span); err != nil {
-		recordError("EncodeResponse", err)
-		s.cfg.ErrorHandler(ctx, w, r, err)
-		return
-	}
-}
-
 // handleAddMetadataFormatRequest handles addMetadataFormat operation.
 //
 // Add a metadata format.
@@ -330,20 +175,20 @@ func (s *Server) handleAddMetadataFormatRequest(args [0]string, argsEscaped bool
 	}
 }
 
-// handleAddRecordRequest handles addRecord operation.
+// handleAddRecordMetadataRequest handles addRecordMetadata operation.
 //
-// Add a record.
+// Add record metadata.
 //
-// POST /add-record
-func (s *Server) handleAddRecordRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
+// POST /add-record-metadata
+func (s *Server) handleAddRecordMetadataRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
 	otelAttrs := []attribute.KeyValue{
-		otelogen.OperationID("addRecord"),
+		otelogen.OperationID("addRecordMetadata"),
 		semconv.HTTPMethodKey.String("POST"),
-		semconv.HTTPRouteKey.String("/add-record"),
+		semconv.HTTPRouteKey.String("/add-record-metadata"),
 	}
 
 	// Start a span for this request.
-	ctx, span := s.cfg.Tracer.Start(r.Context(), "AddRecord",
+	ctx, span := s.cfg.Tracer.Start(r.Context(), "AddRecordMetadata",
 		trace.WithAttributes(otelAttrs...),
 		serverSpanKind,
 	)
@@ -368,15 +213,15 @@ func (s *Server) handleAddRecordRequest(args [0]string, argsEscaped bool, w http
 		}
 		err          error
 		opErrContext = ogenerrors.OperationContext{
-			Name: "AddRecord",
-			ID:   "addRecord",
+			Name: "AddRecordMetadata",
+			ID:   "addRecordMetadata",
 		}
 	)
 	{
 		type bitset = [1]uint8
 		var satisfied bitset
 		{
-			sctx, ok, err := s.securityApiKey(ctx, "AddRecord", r)
+			sctx, ok, err := s.securityApiKey(ctx, "AddRecordMetadata", r)
 			if err != nil {
 				err = &ogenerrors.SecurityError{
 					OperationContext: opErrContext,
@@ -416,7 +261,7 @@ func (s *Server) handleAddRecordRequest(args [0]string, argsEscaped bool, w http
 			return
 		}
 	}
-	request, close, err := s.decodeAddRecordRequest(r)
+	request, close, err := s.decodeAddRecordMetadataRequest(r)
 	if err != nil {
 		err = &ogenerrors.DecodeRequestError{
 			OperationContext: opErrContext,
@@ -432,21 +277,21 @@ func (s *Server) handleAddRecordRequest(args [0]string, argsEscaped bool, w http
 		}
 	}()
 
-	var response *AddRecordOK
+	var response *AddRecordMetadataOK
 	if m := s.cfg.Middleware; m != nil {
 		mreq := middleware.Request{
 			Context:       ctx,
-			OperationName: "AddRecord",
-			OperationID:   "addRecord",
+			OperationName: "AddRecordMetadata",
+			OperationID:   "addRecordMetadata",
 			Body:          request,
 			Params:        middleware.Parameters{},
 			Raw:           r,
 		}
 
 		type (
-			Request  = *AddRecordRequest
+			Request  = *AddRecordMetadataRequest
 			Params   = struct{}
-			Response = *AddRecordOK
+			Response = *AddRecordMetadataOK
 		)
 		response, err = middleware.HookMiddleware[
 			Request,
@@ -457,12 +302,12 @@ func (s *Server) handleAddRecordRequest(args [0]string, argsEscaped bool, w http
 			mreq,
 			nil,
 			func(ctx context.Context, request Request, params Params) (response Response, err error) {
-				err = s.h.AddRecord(ctx, request)
+				err = s.h.AddRecordMetadata(ctx, request)
 				return response, err
 			},
 		)
 	} else {
-		err = s.h.AddRecord(ctx, request)
+		err = s.h.AddRecordMetadata(ctx, request)
 	}
 	if err != nil {
 		recordError("Internal", err)
@@ -478,7 +323,162 @@ func (s *Server) handleAddRecordRequest(args [0]string, argsEscaped bool, w http
 		return
 	}
 
-	if err := encodeAddRecordResponse(response, w, span); err != nil {
+	if err := encodeAddRecordMetadataResponse(response, w, span); err != nil {
+		recordError("EncodeResponse", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+}
+
+// handleAddRecordSetsRequest handles addRecordSets operation.
+//
+// Add record sets.
+//
+// POST /add-record-sets
+func (s *Server) handleAddRecordSetsRequest(args [0]string, argsEscaped bool, w http.ResponseWriter, r *http.Request) {
+	otelAttrs := []attribute.KeyValue{
+		otelogen.OperationID("addRecordSets"),
+		semconv.HTTPMethodKey.String("POST"),
+		semconv.HTTPRouteKey.String("/add-record-sets"),
+	}
+
+	// Start a span for this request.
+	ctx, span := s.cfg.Tracer.Start(r.Context(), "AddRecordSets",
+		trace.WithAttributes(otelAttrs...),
+		serverSpanKind,
+	)
+	defer span.End()
+
+	// Run stopwatch.
+	startTime := time.Now()
+	defer func() {
+		elapsedDuration := time.Since(startTime)
+		// Use floating point division here for higher precision (instead of Millisecond method).
+		s.duration.Record(ctx, float64(float64(elapsedDuration)/float64(time.Millisecond)), metric.WithAttributes(otelAttrs...))
+	}()
+
+	// Increment request counter.
+	s.requests.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+
+	var (
+		recordError = func(stage string, err error) {
+			span.RecordError(err)
+			span.SetStatus(codes.Error, stage)
+			s.errors.Add(ctx, 1, metric.WithAttributes(otelAttrs...))
+		}
+		err          error
+		opErrContext = ogenerrors.OperationContext{
+			Name: "AddRecordSets",
+			ID:   "addRecordSets",
+		}
+	)
+	{
+		type bitset = [1]uint8
+		var satisfied bitset
+		{
+			sctx, ok, err := s.securityApiKey(ctx, "AddRecordSets", r)
+			if err != nil {
+				err = &ogenerrors.SecurityError{
+					OperationContext: opErrContext,
+					Security:         "ApiKey",
+					Err:              err,
+				}
+				recordError("Security:ApiKey", err)
+				s.cfg.ErrorHandler(ctx, w, r, err)
+				return
+			}
+			if ok {
+				satisfied[0] |= 1 << 0
+				ctx = sctx
+			}
+		}
+
+		if ok := func() bool {
+		nextRequirement:
+			for _, requirement := range []bitset{
+				{0b00000001},
+			} {
+				for i, mask := range requirement {
+					if satisfied[i]&mask != mask {
+						continue nextRequirement
+					}
+				}
+				return true
+			}
+			return false
+		}(); !ok {
+			err = &ogenerrors.SecurityError{
+				OperationContext: opErrContext,
+				Err:              ogenerrors.ErrSecurityRequirementIsNotSatisfied,
+			}
+			recordError("Security", err)
+			s.cfg.ErrorHandler(ctx, w, r, err)
+			return
+		}
+	}
+	request, close, err := s.decodeAddRecordSetsRequest(r)
+	if err != nil {
+		err = &ogenerrors.DecodeRequestError{
+			OperationContext: opErrContext,
+			Err:              err,
+		}
+		recordError("DecodeRequest", err)
+		s.cfg.ErrorHandler(ctx, w, r, err)
+		return
+	}
+	defer func() {
+		if err := close(); err != nil {
+			recordError("CloseRequest", err)
+		}
+	}()
+
+	var response *AddRecordSetsOK
+	if m := s.cfg.Middleware; m != nil {
+		mreq := middleware.Request{
+			Context:       ctx,
+			OperationName: "AddRecordSets",
+			OperationID:   "addRecordSets",
+			Body:          request,
+			Params:        middleware.Parameters{},
+			Raw:           r,
+		}
+
+		type (
+			Request  = *AddRecordSetsRequest
+			Params   = struct{}
+			Response = *AddRecordSetsOK
+		)
+		response, err = middleware.HookMiddleware[
+			Request,
+			Params,
+			Response,
+		](
+			m,
+			mreq,
+			nil,
+			func(ctx context.Context, request Request, params Params) (response Response, err error) {
+				err = s.h.AddRecordSets(ctx, request)
+				return response, err
+			},
+		)
+	} else {
+		err = s.h.AddRecordSets(ctx, request)
+	}
+	if err != nil {
+		recordError("Internal", err)
+		if errRes, ok := errors.Into[*ErrorStatusCode](err); ok {
+			encodeErrorResponse(errRes, w, span)
+			return
+		}
+		if errors.Is(err, ht.ErrNotImplemented) {
+			s.cfg.ErrorHandler(ctx, w, r, err)
+			return
+		}
+		encodeErrorResponse(s.h.NewError(ctx, err), w, span)
+		return
+	}
+
+	if err := encodeAddRecordSetsResponse(response, w, span); err != nil {
 		recordError("EncodeResponse", err)
 		s.cfg.ErrorHandler(ctx, w, r, err)
 		return
