# api/v1/oas_router_gen.go
@@ -65,45 +65,8 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 					break
 				}
 				switch elem[0] {
-				case 'm': // Prefix: "metadata"
-					if l := len("metadata"); len(elem) >= l && elem[0:l] == "metadata" {
-						elem = elem[l:]
-					} else {
-						break
-					}
-
-					if len(elem) == 0 {
-						switch r.Method {
-						case "POST":
-							s.handleAddMetadataRequest([0]string{}, elemIsEscaped, w, r)
-						default:
-							s.notAllowed(w, r, "POST")
-						}
-
-						return
-					}
-					switch elem[0] {
-					case '-': // Prefix: "-format"
-						if l := len("-format"); len(elem) >= l && elem[0:l] == "-format" {
-							elem = elem[l:]
-						} else {
-							break
-						}
-
-						if len(elem) == 0 {
-							// Leaf node.
-							switch r.Method {
-							case "POST":
-								s.handleAddMetadataFormatRequest([0]string{}, elemIsEscaped, w, r)
-							default:
-								s.notAllowed(w, r, "POST")
-							}
-
-							return
-						}
-					}
-				case 'r': // Prefix: "record"
-					if l := len("record"); len(elem) >= l && elem[0:l] == "record" {
+				case 'm': // Prefix: "metadata-format"
+					if l := len("metadata-format"); len(elem) >= l && elem[0:l] == "metadata-format" {
 						elem = elem[l:]
 					} else {
 						break
@@ -113,12 +76,60 @@ func (s *Server) ServeHTTP(w http.ResponseWriter, r *http.Request) {
 						// Leaf node.
 						switch r.Method {
 						case "POST":
-							s.handleAddRecordRequest([0]string{}, elemIsEscaped, w, r)
+							s.handleAddMetadataFormatRequest([0]string{}, elemIsEscaped, w, r)
 						default:
 							s.notAllowed(w, r, "POST")
 						}
 
 						return
+					}
+				case 'r': // Prefix: "record-"
+					if l := len("record-"); len(elem) >= l && elem[0:l] == "record-" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						break
+					}
+					switch elem[0] {
+					case 'm': // Prefix: "metadata"
+						if l := len("metadata"); len(elem) >= l && elem[0:l] == "metadata" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf node.
+							switch r.Method {
+							case "POST":
+								s.handleAddRecordMetadataRequest([0]string{}, elemIsEscaped, w, r)
+							default:
+								s.notAllowed(w, r, "POST")
+							}
+
+							return
+						}
+					case 's': // Prefix: "sets"
+						if l := len("sets"); len(elem) >= l && elem[0:l] == "sets" {
+							elem = elem[l:]
+						} else {
+							break
+						}
+
+						if len(elem) == 0 {
+							// Leaf node.
+							switch r.Method {
+							case "POST":
+								s.handleAddRecordSetsRequest([0]string{}, elemIsEscaped, w, r)
+							default:
+								s.notAllowed(w, r, "POST")
+							}
+
+							return
+						}
 					}
 				case 's': // Prefix: "set"
 					if l := len("set"); len(elem) >= l && elem[0:l] == "set" {
@@ -249,8 +260,8 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 					break
 				}
 				switch elem[0] {
-				case 'm': // Prefix: "metadata"
-					if l := len("metadata"); len(elem) >= l && elem[0:l] == "metadata" {
+				case 'm': // Prefix: "metadata-format"
+					if l := len("metadata-format"); len(elem) >= l && elem[0:l] == "metadata-format" {
 						elem = elem[l:]
 					} else {
 						break
@@ -259,9 +270,10 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 					if len(elem) == 0 {
 						switch method {
 						case "POST":
-							r.name = "AddMetadata"
-							r.operationID = "addMetadata"
-							r.pathPattern = "/add-metadata"
+							// Leaf: AddMetadataFormat
+							r.name = "AddMetadataFormat"
+							r.operationID = "addMetadataFormat"
+							r.pathPattern = "/add-metadata-format"
 							r.args = args
 							r.count = 0
 							return r, true
@@ -269,9 +281,19 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 							return
 						}
 					}
+				case 'r': // Prefix: "record-"
+					if l := len("record-"); len(elem) >= l && elem[0:l] == "record-" {
+						elem = elem[l:]
+					} else {
+						break
+					}
+
+					if len(elem) == 0 {
+						break
+					}
 					switch elem[0] {
-					case '-': // Prefix: "-format"
-						if l := len("-format"); len(elem) >= l && elem[0:l] == "-format" {
+					case 'm': // Prefix: "metadata"
+						if l := len("metadata"); len(elem) >= l && elem[0:l] == "metadata" {
 							elem = elem[l:]
 						} else {
 							break
@@ -280,10 +302,10 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 						if len(elem) == 0 {
 							switch method {
 							case "POST":
-								// Leaf: AddMetadataFormat
-								r.name = "AddMetadataFormat"
-								r.operationID = "addMetadataFormat"
-								r.pathPattern = "/add-metadata-format"
+								// Leaf: AddRecordMetadata
+								r.name = "AddRecordMetadata"
+								r.operationID = "addRecordMetadata"
+								r.pathPattern = "/add-record-metadata"
 								r.args = args
 								r.count = 0
 								return r, true
@@ -291,26 +313,26 @@ func (s *Server) FindPath(method string, u *url.URL) (r Route, _ bool) {
 								return
 							}
 						}
-					}
-				case 'r': // Prefix: "record"
-					if l := len("record"); len(elem) >= l && elem[0:l] == "record" {
-						elem = elem[l:]
-					} else {
-						break
-					}
+					case 's': // Prefix: "sets"
+						if l := len("sets"); len(elem) >= l && elem[0:l] == "sets" {
+							elem = elem[l:]
+						} else {
+							break
+						}
 
-					if len(elem) == 0 {
-						switch method {
-						case "POST":
-							// Leaf: AddRecord
-							r.name = "AddRecord"
-							r.operationID = "addRecord"
-							r.pathPattern = "/add-record"
-							r.args = args
-							r.count = 0
-							return r, true
-						default:
-							return
+						if len(elem) == 0 {
+							switch method {
+							case "POST":
+								// Leaf: AddRecordSets
+								r.name = "AddRecordSets"
+								r.operationID = "addRecordSets"
+								r.pathPattern = "/add-record-sets"
+								r.args = args
+								r.count = 0
+								return r, true
+							default:
+								return
+							}
 						}
 					}
 				case 's': // Prefix: "set"
